src/test/ui/never_type/issue-96335.stderr
error: unexpected token: `...`
  --> $DIR/issue-96335.rs:2:6
   |
LL |     0.....{loop{}1};
   |      ^^^
   |
help: use `..` for an exclusive range
   |
LL |     0....{loop{}1};
   |      ~~
help: or `..=` for an inclusive range
   |
LL |     0..=..{loop{}1};
   |      ~~~

error[E0308]: mismatched types
  --> $DIR/issue-96335.rs:2:9
   |
LL |     0.....{loop{}1};
   |     ----^^^^^^^^^^^
   |     |   |
   |     |   expected integer, found struct `RangeTo`
   |     arguments to this function are incorrect
   |
   = note: expected type `{integer}`
            found struct `RangeTo<{integer}>`
note: associated function defined here
  --> $SRC_DIR/core/src/ops/range.rs:LL:COL
   |
LL |     pub const fn new(start: Idx, end: Idx) -> Self {
   |                  ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
